--- a/src/components/QuestionPage/QuestionPage.module.scss
+++ b/src/components/QuestionPage/QuestionPage.module.scss
@@ -22,6 +22,7 @@ button {
   background-color: #ffffff9f;
   transition: background-color 0.3s ease;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  width: 300px;
 
   &:hover {
     background-color: #f0f0f0;
@@ -43,9 +44,34 @@ button {
 .correct {
   background-color: #4CAF50;
   color: white;
+
+  &:hover {
+    background-color: #4CAF50;
+    color: white;
+  }
 }
 
 .incorrect {
   background-color: #F44336;
   color: white;
+
+  &:hover {
+    background-color: #F44336;
+    color: white;
+  }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.loader {
+  border: 5px solid #f3f3f3; /* Jasny kolor tła */
+  border-top: 5px solid #3498db; /* Kolor obracającego się elementu */
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+  margin: 20px auto;
 }
