--- a/src/components/Score/Score.module.scss
+++ b/src/components/Score/Score.module.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding-bottom: 100px;
 
   p {
     font: 500 21px/25px 'Roboto', Arial, sans-serif;
@@ -14,7 +15,7 @@
     margin: 10px;
     padding: 10px 20px;
     border: none;
-    background-color: #ffffff9f;
+    background-color: #fff;
     transition: background-color 0.3s ease;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
   
@@ -31,6 +32,15 @@
 }
 
 .questionCard {
-  margin-top: 5px;
-  border-bottom: solid 1px #000;
+  width: 600px;
+  background-color: #fff; // białe tło dla każdego pytania
+  padding: 15px 20px; // dodanie wewnętrznego marginesu
+  margin: 10px 0; // margines górny i dolny
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 8px; // lekko zaokrąglone rogi
+
+  p {
+    margin: 10px 0;
+    font: 500 21px/25px 'Roboto', Arial, sans-serif;
+  }
 }
